--- a/wp-content/themes/goiteens/assets/scss/layout/page/itmarathon/new-year/_expect.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/itmarathon/new-year/_expect.scss
@@ -26,7 +26,7 @@ background-repeat: no-repeat;
         // max-width: 1440px;
         height: 1407px;
 background-image: url(../images/itmarathon/xmas-img/expect-desk.svg), url(../images/itmarathon/xmas-img/garland.svg);
-background-position: top 0 center, bottom 0 left 0, top 40px center;
+background-position: top 0 center, bottom -20px left 0;
 background-size: cover, 307px;
         
       }
@@ -37,13 +37,15 @@ background-size: cover, 307px;
         content: "";
         display: block;
         bottom:0;
-        right: 0;
+        right: -10px;
         z-index: 3;
         background-image:url(../images/itmarathon/xmas-img/hat-man-mob-2x.png);
         background-repeat: no-repeat;
         background-size: contain;
   
         @media screen and (min-width: 1280px) {
+          bottom: -20px;
+          right: 0;
           width: 296px;
           height: 617px;
           background-image:url(../images/itmarathon/xmas-img/hat-man-desk-2x.png);
