fix hat-man img tab version

--- a/wp-content/themes/goiteens/assets/scss/layout/page/itmarathon/new-year/_expect.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/itmarathon/new-year/_expect.scss
@@ -37,7 +37,7 @@ background-size: cover, 307px;
         content: "";
         display: block;
         bottom:0;
-        right: -10px;
+        right: 0;
         z-index: 3;
         background-image:url(../images/itmarathon/xmas-img/hat-man-mob-2x.png);
         background-repeat: no-repeat;
