--- a/wp-content/themes/goiteens/assets/scss/layout/page/sales/_gift-certificate.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/sales/_gift-certificate.scss
@@ -166,8 +166,7 @@
             flex-basis: 55%;
         }
 
-        & > b{
-            display: block;
+        & > h5{
             font-size: 18px;
             font-weight: 700;
             line-height: 1.4;
