--- a/wp-content/themes/goiteens/assets/scss/main.scss
+++ b/wp-content/themes/goiteens/assets/scss/main.scss
@@ -34,4 +34,5 @@
  * Pages
  */
 @import "layout/page/home/index";
+@import "layout/page/sales/index";
 @import "layout/page/itmarathon/new-year/index";
