fix nm in color

--- a/wp-content/themes/goiteens/assets/scss/base/_variables.scss
+++ b/wp-content/themes/goiteens/assets/scss/base/_variables.scss
@@ -54,8 +54,8 @@ $color-nm-btn-act   :   #368900;
 $color-nm-bg-lite   :   #FAF9F9;
 $color-nm-yellow    :   #FEC830;
 $color-nm-purple    :   #AA43A2;
-$color-nw-text-lite :   #504C5C;
-$color-nw-text      :   #202020;
+$color-nm-text-lite :   #504C5C;
+$color-nm-text      :   #202020;
 $color-nm-marker    :   #FFF2CC;
 $color-nm-text-mid  :   #504C5C;
 $color-nm-text-gray :   #3F3F3F;
