--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_reset.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_reset.scss
@@ -1,6 +1,6 @@
 .new-minecraft{
     background-color: $color-white;
-    color: $color-nw-text;
+    color: $color-nm-text;
 
     ul{
         margin: 0;
