added styles 4th section

--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_index.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_index.scss
@@ -2,6 +2,7 @@
 @import "visually-hidden";
 @import "container";
 @import "section-title";
+@import "btn-registration";
 @import "text";
 @import "name";
 @import "info-box";
