--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_hero-minecraft.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_hero-minecraft.scss
@@ -16,6 +16,8 @@
     background-position: top 0 right -200px;
     padding-top: 40px;
     padding-bottom: 94px;
+    max-width: 1440px;
+    margin: 0 auto;
      }
      & > .container{
       @media screen and (min-width: 768px) {
