6th section added

--- a/wp-content/themes/goiteens/assets/scss/base/_variables.scss
+++ b/wp-content/themes/goiteens/assets/scss/base/_variables.scss
@@ -59,3 +59,4 @@ $color-nm-text      :   #202020;
 $color-nm-marker    :   #FFF2CC;
 $color-nm-text-mid  :   #504C5C;
 $color-nm-text-gray :   #3F3F3F;
+$color-nm-counter-bg:   #FFE58A;
