--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_index.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_index.scss
@@ -2,6 +2,8 @@
 @import "visually-hidden";
 @import "container";
 @import "section-title";
+@import "subtitle-blog";
+@import "suggestion-block";
 @import "btn-registration";
 @import "text";
 @import "name";
