--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_btn-registration.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_btn-registration.scss
@@ -1,5 +1,7 @@
 .new-minecraft{
     .btn_registration {
+        margin-left: auto;
+        margin-right: auto;
         width: 272px;
         height: 44px;
         box-shadow: 0px 4px 2px rgba(10, 15, 6, 0.3);
