--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_interesting-math.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_interesting-math.scss
@@ -204,22 +204,23 @@ flex-basis: calc((100% - 32px) / 2);
       }
 
     }
-    &  h3{
-      margin: 0 auto 20px;
-      font-size: 18px;
-      line-height: 1.22;
-      font-weight: 500;
-      text-align: center;
-      @media screen and (min-width: 768px) {
-        font-size: 20px;
-        line-height: 1.4;
-        max-width: 336px;
-      }
-      @media screen and (min-width: 1280px) {
-       max-width: 306px;
+    // &  h3{
+    //   margin: 0 auto 20px;
+    //   font-size: 18px;
+    //   line-height: 1.22;
+    //   font-weight: 500;
+    //   text-align: center;
+    //   @media screen and (min-width: 768px) {
+    //     font-size: 20px;
+    //     line-height: 1.4;
+    //     max-width: 336px;
+    //   }
+    //   @media screen and (min-width: 1280px) {
+    //    max-width: 306px;
         
-      }
-    }
+    //   }
+    // }
+
     &  strong{
       text-align: center;
       font-weight: 400;
@@ -237,8 +238,6 @@ flex-basis: calc((100% - 32px) / 2);
         
       }
     }
-    &  .btn_registration{
-      margin: 0 auto;
-    } 
+
 }
 }
