--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_lessons-details.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_lessons-details.scss
@@ -30,6 +30,7 @@
           }
     }
     .lessons_item {
+      background-color: $color-white;
         box-shadow: 0px 1px 2px rgba(2, 105, 0, 0.08), 10px 10px 32px rgba(2, 105, 0, 0.14);
 border-radius: 4px;
 display: flex;
@@ -55,7 +56,6 @@ padding: 5px;
           @media screen and (min-width: 1280px) {
             flex-basis: calc((100% - 2 * 32px) / 3);
             flex-wrap: nowrap;
-            margin-bottom: 60px;
             gap:32px;
           }
     }
@@ -127,25 +127,23 @@ border-radius: 4px;
 text-align: center;
           }
     }
-&  strong{
-    margin-bottom: 20px;
-    font-size: 16px;
-    display: block;
-    line-height: 1.2;
-    text-align: center;
-    font-weight: 500;
-    @media screen and (min-width: 768px) {
-        max-width: 348px;
-        margin: 0 auto 40px;
+// &  strong{
+//     margin-bottom: 20px;
+//     font-size: 16px;
+//     display: block;
+//     line-height: 1.2;
+//     text-align: center;
+//     font-weight: 500;
+//     @media screen and (min-width: 768px) {
+//         max-width: 348px;
+//         margin: 0 auto 40px;
 
-      }
-      @media screen and (min-width: 1280px) {
-        max-width: 435px;
-        font-style: 20px;
-      }
-}
-&  .btn_registration{
-    margin: 0 auto;
-}
+//       }
+//       @media screen and (min-width: 1280px) {
+//         max-width: 435px;
+//         font-size: 20px;
+//       }
+
+// }
 }
 }
