--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_ten-reasons.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_ten-reasons.scss
@@ -1,11 +1,76 @@
 .new-minecraft{
     .ten-reasons {
+        background-color: $color-white;
+        padding: 20px 0;
+        @media screen and (min-width: 768px) {
+            padding: 40px 0;
+          }
+          @media screen and (min-width: 1280px) {
+            padding: 60px 0;
+          }
+    &_list {
+        display: flex;
+        flex-direction: column;
+        gap:16px;
+        margin-bottom: 12px;
+        counter-reset: ten-reasons-item ;
+        @media screen and (min-width: 768px) {
+            flex-direction: row;
+            margin-bottom: 40px;
+            -ms-flex-wrap: wrap;
+            row-gap:20px;
+            flex-wrap: wrap;
+            column-gap: 32px;
+            justify-content: center;
+          }
+          @media screen and (min-width: 1280px) {
+            column-gap:32px;
+            row-gap: 40px;
+            justify-content: left;
+          }
     }
-    .ten-reasons_list {
+    &_item {
+
+        position: relative;
+        padding-left: 80px;
+        width: 100%;
+       
+        min-height: 66px;
+        @media screen and (min-width: 768px) {
+            flex-basis: calc((100% - 33px) / 2);
+          }
+          @media screen and (min-width: 1280px) {
+            flex-basis: calc((100% - 2 * 32px) / 3);
+          }
+          &:before{
+display: block;
+content: " 0"counter(ten-reasons-item);
+counter-increment: ten-reasons-item;
+position: absolute;
+width: 54px;
+height: 48px;
+top:0;
+left: -15px;
+background: radial-gradient(76.7% 76.7% at 58.24% 29.89%, #FFF9E4 0%, #FFE58A 100%);
+
+font-weight: 700;
+background-size: 60px;
+background-repeat: no-repeat;
+
+font-size: 36px;
+color: $color-nm-green-act;
+border-radius: 4px;
+text-align: center;
+@media screen and (min-width: 768px) {
+    width: 77px;
+height: 66px;
+font-size: 50px;
+
+  }
+          }
+    
     }
-    .ten-reasons_item {
-    }
-    .ten-reasons_info {
+    &_info {
     }
     .awards_list {
     }
@@ -13,4 +78,5 @@
     }
     .awards {
     }
+}
 }
