added 12th section

--- a/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_unique-methodology.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/new-minecraft/_unique-methodology.scss
@@ -1,5 +1,6 @@
 .new-minecraft{
     .methodology {
+        padding: 20px 0;
         background-color: $color-nm-bg-lite;
         @media screen and (min-width: 768px) {
             padding: 60px 0 40px;
